@@ -1,7 +1,9 @@
 package au.lupine.quarters.command.quarters.method;
 
+import au.lupine.quarters.Quarters;
 import au.lupine.quarters.api.QuartersMessaging;
-import au.lupine.quarters.api.manager.ConfigManager;
+import au.lupine.quarters.api.event.QuarterCreateEvent;
+import au.lupine.quarters.api.event.QuarterPreCreateEvent;
 import au.lupine.quarters.api.manager.QuarterManager;
 import au.lupine.quarters.api.manager.SelectionManager;
 import au.lupine.quarters.object.base.CommandMethod;
@@ -11,62 +13,90 @@ import au.lupine.quarters.object.exception.CommandMethodException;
 import au.lupine.quarters.object.state.CuboidValidity;
 import au.lupine.quarters.object.wrapper.StringConstants;
 import com.palmergames.bukkit.towny.TownyAPI;
+import com.palmergames.bukkit.towny.object.Resident;
 import com.palmergames.bukkit.towny.object.Town;
+import io.papermc.paper.command.brigadier.CommandSourceStack;
+import net.kyori.adventure.text.Component;
+import net.kyori.adventure.text.minimessage.translation.Argument;
 import org.bukkit.Location;
-import org.bukkit.command.CommandSender;
 import org.bukkit.entity.Player;
+import org.jetbrains.annotations.NotNull;
 
 import java.util.List;
 
-public class CreateMethod extends CommandMethod {
+public final class CreateMethod extends CommandMethod {
 
-    public CreateMethod(CommandSender sender, String[] args) {
-        super(sender, args, "quarters.command.quarters.create", true);
+    public CreateMethod() {
+        super("create", "quarters.command.quarters.create", true);
     }
 
     @Override
-    public void execute() {
-        Player player = getSenderAsPlayerOrThrow();
+    public void execute(@NotNull CommandSourceStack source) {
+        Player player = getSenderAsPlayerOrThrow(source);
 
         SelectionManager sm = SelectionManager.getInstance();
 
+        Resident resident = TownyAPI.getInstance().getResident(player);
+        if (resident == null) return;
+
         List<Cuboid> cuboids = sm.getCuboidsOrSelectionAsCuboid(player);
+
+        QuarterPreCreateEvent preEvent = new QuarterPreCreateEvent(player, resident, cuboids);
+        preEvent.callEvent();
+        if (preEvent.isCancelled()) {
+            String cancelMessage = preEvent.getCancelMessage();
+            if (cancelMessage != null) QuartersMessaging.sendErrorMessage(player, cancelMessage);
+            return;
+        }
+
+        cuboids = preEvent.getCuboids();
         if (cuboids.isEmpty()) throw new CommandMethodException(StringConstants.YOU_HAVE_NOT_SELECTED_ANY_AREAS);
 
-        Town town = TownyAPI.getInstance().getTown(cuboids.get(0).getCornerOne());
-        if (town == null) throw new CommandMethodException("Could not resolve a town from the first selected position");
+        Town town = TownyAPI.getInstance().getTown(cuboids.getFirst().getCornerOne());
+        if (town == null) throw new CommandMethodException("quarters.command.quarters.create.feedback.no_town");
 
-        if (!town.hasResident(player)) throw new CommandMethodException("You are not part of this town, you can only make quarters in your own town");
+        if (!town.hasResident(player)) throw new CommandMethodException("quarters.command.quarters.create.feedback.not_in_town");
 
         for (Cuboid cuboid : cuboids) {
             CuboidValidity validity = cuboid.checkValidity();
             switch (validity) {
-                case CONTAINS_WILDERNESS -> throw new CommandMethodException("Failed to create quarter as it contains wilderness");
-                case INTERSECTS -> throw new CommandMethodException("Failed to create quarter as it intersects with a pre-existing quarter");
-                case SPANS_MULTIPLE_TOWNS -> throw new CommandMethodException("Failed to create quarter as it spans multiple towns");
-                case OUTSIDE_WORLD_BOUNDS -> throw new CommandMethodException("Failed to create quarter as it outside of this world's maximum or minimum height");
-                case TOO_LARGE -> throw new CommandMethodException("Failed to create quarter as at least one of its cuboids is too large");
+                case CONTAINS_WILDERNESS -> throw new CommandMethodException("quarters.command.quarters.create.feedback.contains_wilderness");
+                case INTERSECTS -> throw new CommandMethodException("quarters.command.quarters.create.feedback.intersects");
+                case SPANS_MULTIPLE_TOWNS -> throw new CommandMethodException("quarters.command.quarters.create.feedback.spans_multiple_towns");
+                case OUTSIDE_WORLD_BOUNDS -> throw new CommandMethodException("quarters.command.quarters.create.feedback.outside_world_bounds");
+                case TOO_LARGE -> throw new CommandMethodException("quarters.command.quarters.create.feedback.too_large_cuboid");
             }
         }
 
         List<Quarter> quarterList = QuarterManager.getInstance().getQuarters(town);
-        int maxQuarters = ConfigManager.getMaxQuartersPerTown();
-        if (maxQuarters > -1 && quarterList.size() == maxQuarters) throw new CommandMethodException("Selected quarter could not be created as " + town.getName() + " will exceed the configured quarter limit of " + maxQuarters);
+        int maxQuarters = Quarters.getInstance().config().quarters.maxQuartersPerTown;
+        if (maxQuarters > -1 && quarterList.size() >= maxQuarters) throw new CommandMethodException(
+                "quarters.command.quarters.create.feedback.town_limit",
+                Argument.string("town", town.getName()),
+                Argument.string("max", Integer.toString(maxQuarters))
+        );
 
         Quarter quarter = new Quarter(town, cuboids, player.getUniqueId());
 
-        int maxVolume = ConfigManager.getMaxQuarterVolume();
-        if (maxVolume > -1 && quarter.getVolume() > maxVolume) throw new CommandMethodException("This quarter is too large, the max configured volume is " + maxVolume + " blocks");
+        int maxVolume = Quarters.getInstance().config().quarters.maxQuarterVolume;
+        if (maxVolume > -1 && quarter.getVolume() > maxVolume) throw new CommandMethodException(
+                "quarters.command.quarters.create.feedback.max_volume",
+                Argument.string("max", Integer.toString(maxVolume))
+        );
 
         quarter.save();
 
-        QuartersMessaging.sendSuccessMessage(player, "Selected quarter has been successfully created");
+        QuartersMessaging.sendSuccessMessage(player, "quarters.command.quarters.create.feedback.success");
 
         Location location = quarter.getFirstCornerOfFirstCuboid();
 
         sm.clearSelection(player);
         sm.clearCuboids(player);
 
-        QuartersMessaging.sendCommandFeedbackToTown(town, player, "has created a quarter", location);
+        QuartersMessaging.sendCommandFeedbackToTown(town, player, "quarters.command.quarters.create.feedback.town", location);
+
+        QuarterCreateEvent postEvent = new QuarterCreateEvent(quarter);
+        postEvent.callEvent();
     }
+
 }
